Enhancements to the index page

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Himagiri Nurseries - Horticulture and Landscaping experts</title>
+    <title>Himagiri Nurseries - Wholesale plant nursery</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
   <link rel="icon" href="assets/img/hn-fav.png" type="image/x-icon" />
-  <link rel="apple-touch-icon" type="image/x-icon"  href="assets/img/hn-fav1.png?">
+  <link rel="apple-touch-icon" type="image/x-icon"  href="assets/img/hn-fav1.ico?">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -37,7 +37,7 @@
 
       <div class="row justify-content-center">
         <div class="col-xl-12 d-flex align-items-center justify-content-between">
-            <h1 class="logo"><a href="index.html"><p style="color:#00cc81"><strong>H</strong>imagiri <strong>N</strong>urseries</p></a></h1>
+            <h1 class="logo"><a href="index.html"><p style="color:#00cc81">Himagiri Nurseries</p></a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
 <!--           <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -65,7 +65,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8">
           <h1>Himagiri Nurseries</h1>
-          <h2></h2>
+          <h2><small>-Join hands to save nature, we  cannot create another-</small></h2>
           <!--<a href="" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>-->
         </div>
       </div>
@@ -79,13 +79,18 @@
       <div class="container">
         <div class="section-title">
           <h2>About Us</h2>
-          <p>Himagiri Nursery is a registered firm established in the year 2002 at Burrilanka, Kadiyam mandal, East Godavari District, Andhra Pradesh, India with a sole motto of development in the horticulture sector.</p>
+          <p>Himagiri Nurseries is a registered firm established in the year 2002 at Burrilanka, Kadiyam mandal, East Godavari District, Andhra Pradesh, India with a sole motto of development in the horticulture sector.</p>
             <p>
                 <br>
             </p>
             <p>
                 The company’s endeavor is to reap the huge horticulture potential in the nursery, gardening & landscaping sectors. The firm was established under the innovative management of our proprietor Mr. Ravi Danduboyina, and the Company has ever since been scaling new heights in its business endeavor.
             </p>
+            <br>
+            <p>
+                The company thrives on a well organized business network that is spread in various parts of Andhra Pradesh and Telangana.  Our network has given us an opportunity to serve our varied clients like schools, hotels, collage, offices and individuals in the best possible way.  Accordingly we are reckoned to be one of the most reliable <strong><span class="text-success">wholesale plant distributors</span></strong> in the country.
+            </p>
+          </div>
       <div class="row content">
           <p><br></p>
       </div>
@@ -112,16 +117,23 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 ">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="404.html">Landscaping</a></h4>
+              <div class="icon"><i class="bx ri-plant-line"></i></div>
+              <h4><a href="404.html">Wholesale Plant</a></h4>
               <p></p>
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 ">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bxs-tree"></i></div>
+              <h4><a href="404.html">Landscaping</a></h4>
+              <p></p>
+            </div>
+          </div>
 <!--          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">-->
           <div class="col-lg-4 col-md-6 ">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx ri-layout-masonry-line"></i></div>
               <h4><a href="404.html">Paving</a></h4>
               <p></p>
             </div>
@@ -129,7 +141,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"><i class="bx ri-contrast-drop-2-line"></i></div>
               <h4><a href="404.html">Irrigation</a></h4>
               <p></p>
             </div>
@@ -147,7 +159,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
+              <div class="icon"><i class="bx ri-seedling-line"></i></div>
               <h4><a href="404.html">Garden Set-up</a></h4>
               <p></p>
             </div>
@@ -155,7 +167,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
+              <div class="icon"><i class="bx ri-plant-line"></i></div>
               <h4><a href="404.html">Garden Maintenance</a></h4>
               <p></p>
             </div>
@@ -333,27 +345,38 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Project 1</li>
-              <li data-filter=".filter-card">Project  2</li>
-              <li data-filter=".filter-web">Project 3</li>
+              <li data-filter=".filter-plantdist">Plant distribution</li>
+              <li data-filter=".filter-maintenance">Maintenance</li>
+              <li data-filter=".filter-landscape">Landscape</li>
+              <li data-filter=".filter-horticulture">Horticulture</li>
             </ul>
           </div>
         </div>
 
 
         <div class="row portfolio-container">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/HN.PNG" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-plantdist">
+              <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Project 1</h4>
-              <p>Project</p>
+              <h4></h4>
+              <p>Golfcourse maintanence at ONGC base complex</p>
               <a href="assets/img/HN.PNG" data-gall="portfolioGallery" class="venobox preview-link" title="Project 1"><i class="bx bx-plus"></i></a>
               <a href="404.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-maintenance">
+            <h4>Golfcourse maintanence at ONGC base complex</h4>
+<!--              <img src="assets/img/HN.PNG" class="img-fluid" alt="">-->
+            <div class="portfolio-info">
+              <h4></h4>
+              <p>Golfcourse maintanence at ONGC base complex</p>
+              <a href="assets/img/HN.PNG" data-gall="portfolioGallery" class="venobox preview-link" title="Project 1"><i class="bx bx-plus"></i></a>
+              <a href="404.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-horticulture">
             <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Project 3</h4>
@@ -363,7 +386,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-maintenance">
             <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Project 1</h4>
@@ -373,7 +396,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-landscape">
             <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Project 2</h4>
@@ -383,7 +406,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-horticulture">
             <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Project 3</h4>
@@ -393,7 +416,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-maintenance">
             <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Project 1</h4>
@@ -403,7 +426,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-landscape">
             <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Project 2</h4>
@@ -413,7 +436,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-landscape">
             <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Project 2</h4>
@@ -423,7 +446,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-horticulture">
             <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Project 3</h4>
