--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link rel="icon" href="assets/img/hn-fav.png" type="image/x-icon" />
-  <link rel="apple-touch-icon" type="image/x-icon"  href="assets/img/hn-fav1.ico?">
+  <link rel="apple-touch-icon" type="image/x-icon"  href="assets/img/hn-fav1.png?">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
